@@ -33,3 +33,13 @@ tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
     options.release.set(11)
 }
+
+tasks.register('run', JavaExec) {
+    classpath = sourceSets.test.runtimeClasspath
+    mainClass = 'com.github.orgonag.fbclan.FinalBossPluginTest'
+    jvmArgs = [
+        '-ea',
+        '--add-opens', 'java.desktop/com.apple.eawt=ALL-UNNAMED',
+        '--add-exports', 'java.desktop/com.apple.eawt=ALL-UNNAMED'
+    ]
+}
